Finished chat and line
